[package]
name = "league-of-music"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# I need todo the features
[features]
default = ["league"]
# rodio = []

league = []

[dependencies]
anyhow = "1.0.66"
crossbeam-channel = "0.5.6"
inputbot = { git = "https://github.com/obv-mikhail/InputBot" }
lazy_static = "1.4.0"
# miniaudio = "0.10.0"
reqwest = {version = "0.11.13", features = ["default-tls","blocking"]}
rodio = "0.16.0"
serde = {version = "1.0.151", features = ["derive"] }
serde_json = "1.0.89"

tokio = { version = "1.23.0", features = ["full"] }
toml = "0.5.10"
winapi = { version = "0.3.9", features = ["winuser"]}

miniaudio = {version = "0.10.0", optional = true}
zip = "0.6.3"

# portaudio = "0.7.0"
